5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1716_2503.log
== TEST (2019-05-10 13:03:53) 
-- CODE:
print(1/6)*4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(1/6)*4
TypeError: unsupported operand type(s) for *: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:04:41) 
-- CODE:
a = (1/6)
b = a*4
print(b)
-- OUTPUT:
0.6666666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:34:53) 
-- CODE:
n=1
b = 4/(2n-1)
print(b)
-- ERROR:
File "XXXX", line 2
    b = 4/(2n-1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:35:21) 
-- CODE:
n=1
b = 4/(2*n-1)
print(b)
-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:41:58) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
while (i < n):
	b = (4/(2*n-1))*(-1)*((-1)**n)
	pi = i+b
	i=i+1
	print(b)
	
-- OUTPUT:
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.0147601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:42:11) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
while (i < n):
	b = (4/(2*n-1))*(-1)*((-1)**n)
	pi = i+b
	i=i+1
	print(b)
	
-- OUTPUT:
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.0147601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:43:52) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
while (i < n):
	b = (4/(2*n-1))*(-1)*((-1)**n)
	pi = i+b
	i=i+1
	print(pi)
	
-- OUTPUT:
-0.014760147601476014
0.985239852398524
1.985239852398524
2.985239852398524
3.985239852398524
4.985239852398524
5.985239852398524
6.985239852398524
7.985239852398524
8.985239852398523
9.985239852398523
10.985239852398523
11.985239852398523
12.985239852398523
13.985239852398523
14.985239852398523
15.985239852398523
16.985239852398525
17.985239852398525
18.985239852398525
19.985239852398525
20.985239852398525
21.985239852398525
22.985239852398525
23.985239852398525
24.985239852398525
25.985239852398525
26.985239852398525
27.985239852398525
28.985239852398525
29.985239852398525
30.985239852398525
31.985239852398525
32.98523985239852
33.98523985239852
34.98523985239852
35.98523985239852
36.98523985239852
37.98523985239852
38.98523985239852
39.98523985239852
40.98523985239852
41.98523985239852
42.98523985239852
43.98523985239852
44.98523985239852
45.98523985239852
46.98523985239852
47.98523985239852
48.98523985239852
49.98523985239852
50.98523985239852
51.98523985239852
52.98523985239852
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:44:03) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
while (i < n):
	b = (4/(2*n-1))*(-1)*((-1)**n)
	pi = i+b
	i=i+1
	print(pi)
	
-- OUTPUT:
-0.014760147601476014
0.985239852398524
1.985239852398524
2.985239852398524
3.985239852398524
4.985239852398524
5.985239852398524
6.985239852398524
7.985239852398524
8.985239852398523
9.985239852398523
10.985239852398523
11.985239852398523
12.985239852398523
13.985239852398523
14.985239852398523
15.985239852398523
16.985239852398525
17.985239852398525
18.985239852398525
19.985239852398525
20.985239852398525
21.985239852398525
22.985239852398525
23.985239852398525
24.985239852398525
25.985239852398525
26.985239852398525
27.985239852398525
28.985239852398525
29.985239852398525
30.985239852398525
31.985239852398525
32.98523985239852
33.98523985239852
34.98523985239852
35.98523985239852
36.98523985239852
37.98523985239852
38.98523985239852
39.98523985239852
40.98523985239852
41.98523985239852
42.98523985239852
43.98523985239852
44.98523985239852
45.98523985239852
46.98523985239852
47.98523985239852
48.98523985239852
49.98523985239852
50.98523985239852
51.98523985239852
52.98523985239852
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:45:23) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
while (i < n):
	pi = 0
	b = (4/(2*n-1))*(-1)*((-1)**n)
	pi = pi+b
	i=i+1
	print(pi)
	
-- OUTPUT:
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.0147601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:45:30) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
while (i < n):
	pi = 0
	b = (4/(2*n-1))*(-1)*((-1)**n)
	pi = pi+b
	i=i+1
	print(pi)
	
-- OUTPUT:
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.0147601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:46:16) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
pi = 0
while (i < n):
	b = (4/(2*n-1))*(-1)*((-1)**n)
	pi = pi+b
	i=i+1
print(pi)
	
-- OUTPUT:
-2.0073800738007406
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:46:24) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
pi = 0
while (i < n):
	b = (4/(2*n-1))*(-1)*((-1)**n)
	pi = pi+b
	i=i+1
print(pi)
	
-- OUTPUT:
-2.0073800738007406
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:48:37) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
pi = 0
while (i < n):
	b = (4/(2*n-1))*(-1)*((-1)**n)
	pi = pi+b
	i=i+1
	print(b)
print(pi)
	
-- OUTPUT:
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.0147601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:49:10) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
pi = 0
while (i < n):
	b = (4/(2*n-1))*(-1)*((-1)**n)
	pi = pi+b
	i=i+1
	print(b)

	
-- OUTPUT:
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.0147601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:49:23) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
pi = 0
while (i < n):
	b = (4/(2*n-1))*(-1)*((-1)**n)
	pi = pi+b
	i=i+1
	print(b)

	
-- OUTPUT:
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.0147601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:49:47) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
pi = 0
while (i < n):
	b = (4/(2*n-1))*(-1)*((-1)**n)
	pi = pi+b
	i=i+1
	print(b)

	
-- OUTPUT:
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.014760147601476014
-0.0147601
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:53:36) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
pi = 0
while (i < n):
	pi = pi + (4/(2*n-1))*(-1)*((-1)**n)
	i=i+1
print(pi)	

	
-- OUTPUT:
-2.0073800738007406
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:53:57) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
pi = 0
while (i < n):
	pi = pi + (4/(2*n-1))*(-1)*((-1)**n)
	i=i+1
print(pi)	

	
-- OUTPUT:
-2.0073800738007406
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:35:37) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
pi = 0
while (i < n):
	pi = (4/(2*i+1))*(-1)**n
	i=i+1
print(pi)	

	
-- OUTPUT:
0.014760147601476014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:36:09) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
pi = 0
while (i < n):
	pi = (4/(2*i+1))*(-1)**i
	i=i+1
print(pi)	

	
-- OUTPUT:
-0.014760147601476014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:36:29) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
pi = 0
while (i < n):
	pi = (4/(2*i+1))*(-1)**i
	i=i+1
print(pi)	

	
-- OUTPUT:
-0.014760147601476014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:37:27) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i=0
pi = 0
while (i < n):
	pi = (4/(2*i+1))*(-1)**i
	i=i+1
print(pi)	

	
-- OUTPUT:
-0.014760147601476014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:56:41) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	pi = (4/(2*i+1))*(-1)**i
	i=i+1
print(pi)	

	
-- OUTPUT:
-0.014760147601476014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:57:34) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	pi = (4/(2*i+1))*(-1)**i
	i=i+1
print(pi)	

	
-- OUTPUT:
-0.014760147601476014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:58:58) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	pi = pi + (4/(2*i+1))*(-1)**i
	i=i+1
print(pi)	

	
-- OUTPUT:
3.1342398117921664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:59:05) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	pi = pi + (4/(2*i+1))*(-1)**i
	i=i+1
print(pi)	

	
-- OUTPUT:
3.1342398117921664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:59:35) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	pi = pi + (4/(2*i+1))*(-1)**i
	i=i+1
print(round(pi, 8))	

	
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:59:51) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	pi = pi + (4/(2*i+1))*(-1)**i
	i=i+1
print(round(pi, 8))	

	
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 21:00:01) 
-- CODE:
n = int(input("Digite um numero natural maior do que zero: "))
i = 0
pi = 0
while (i < n):
	pi = pi + (4/(2*i+1))*(-1)**i
	i=i+1
print(round(pi, 8))	

	
-- EXECUTION TIME:
0.128401
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
